# irregular-benchmarking

./: .gitignore  CMakeLists.txt  README.md  analysis.py  benchmark-runner.py  check-fit.py  parameter.py  plot-ecdf.py
benchmark/: benchmark.c  benchmark.cpp  empirical.c  l7_update_cuda.cu  l7_update_host.cpp  l7_update_kern.cl  state_kern.cl
data/: XRAGE_QUARTZ_BENCHMARK_36_1.txt
data/CabanaMD/: CABANAMD_QUARTZ_1.txt  CABANAMD_QUARTZ_16.txt  CABANAMD_QUARTZ_16_32.txt  CABANAMD_QUARTZ_1_32.txt  CABANAMD_QUARTZ_2_32.txt  CABANAMD_QUARTZ_4_32.txt  CABANAMD_QUARTZ_8.txt  CABANAMD_QUARTZ_8_32.txt
data/xrage-benchmark-128/: BENCHMARK_RECREATION.txt
empirical/: README.md  empirical.c
example_data/: cabanamd_lassen_32.txt  clamr_quartz_1_32.txt
examples/: README.md  cabanamd_lassen_32.txt  cabanamd_quartz_1_32.txt  cabanamd_quartz_1_72.txt  clamr_quartz_4.txt  example_clamr_parameter.txt  reproducible_clamr_OLD.txt
instrumented-repo/: repo.yaml
job_scripts/: analysis.sbatch
l7/: CMakeLists.txt  LICENSE  README-NBR.md  README.md  l7.h  l7_assert.h  l7_broadcast.c  l7_dev_free.c  l7_dev_setup.c  l7_dev_update.c  l7_free.c  l7_init.c  l7_kern.cl  l7_push_free.c  l7_push_setup.c  l7_push_update.c  l7_reduction.c  l7_setup.c  l7_terminate.c  l7_update.c  l7_utils.c  l7p.h  l7p_mpi_type.c  l7p_nbr_state.c  l7p_push_type.c  l7p_set_database.c  l7p_sizeof.c  l7p_update_type.c
l7/cmake/Modules/: FindPackageHandleStandardArgs.cmake  FindVector.cmake  TargetDistclean.cmake
l7/docs/: About.rst
l7/docs/breathe-3.2.0/: README.rst  setup.cfg
l7/docs/breathe-3.2.0/breathe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
l7/docs/breathe-3.2.0/breathe/parser/: __init__.py
l7/docs/breathe-3.2.0/breathe/parser/doxygen/: index.py
l7/docs/breathe-3.2.0/breathe/renderer/rst/doxygen/: __init__.py  compound.py  filter.py
l7/tests/: broadcast_test.c  cuda_update_perf.cu  reduction_test.c  update_perf.c  update_test.c
l7_benchmark/: l7_update_host.c  l7_update_kern.cl  l7_update_opencl.c  l7_update_openmp.c  l7_update_perf.c
model/: parameter.py
results/: README.md
results/BENCHMARK_CABANAMD_16_32/: results.txt
results/BENCHMARK_CLAMR_16_32/: results.txt
results/CABANAMD_QUARTZ_16_32/: BENCHMARK_CONFIG
results/CABANAMD_QUARTZ_1_32/: BENCHMARK_CONFIG
results/CABANAMD_QUARTZ_2_32/: BENCHMARK_CONFIG
results/CABANAMD_QUARTZ_4_32/: BENCHMARK_CONFIG
results/CABANAMD_QUARTZ_8_32/: BENCHMARK_CONFIG
results/CLAMR_QUARTZ_16_32/: BENCHMARK_CONFIG  benchmark
results/CLAMR_QUARTZ_1_32/: BENCHMARK_CONFIG
results/CLAMR_QUARTZ_2_32/: BENCHMARK_CONFIG
results/CLAMR_QUARTZ_4_32/: BENCHMARK_CONFIG
results/CLAMR_QUARTZ_8_32/: BENCHMARK_CONFIG
results/CLAMR_QUARTZ_BENCHMARK_16_32/: BENCHMARK_CONFIG
results/condensed/: BENCHMARK_CONFIG
results/xrage-darwin-128/: BENCHMARK_CONFIG
scripts/: README.md  analyze_all_data.sh  analyze_clamr_data.sh  data-clean.py  quartz-benchmark.sh  quartz-collect.sh
